# Polygon-mesh

./: CMakeLists.txt  EXECUTION_DEMO.md  FINAL_EXECUTION_REPORT.md  README.md  build_validation.md  compile_test.bat  complete_demo.cpp  debug_step_test.cpp  debug_test.cpp  io_test.cpp  iteration_test.ply  minimal.ply  minimal_mesh_test.cpp  minimal_ply_test.cpp  no_edge_test.cpp  online_test_instructions.md  ply_iteration_test.cpp  ply_test.cpp  pyramid_test.ply  quick_demo.bat  run_all_demos.bat  run_all_demos_v2.bat  run_test.bat  runtime_test.cpp  safe_ply_test.cpp  simple_ply_save_test.cpp  simple_test.cpp  step_by_step_test.cpp  syntax_check.cpp  test_compile.cpp  test_execution_report.md  test_header.ply  working_ply_test.cpp
.claude/: settings.local.json
cmake/: polygon_mesh-config.cmake.in
docs/: architecture.md  build_instructions.md
examples/: CMakeLists.txt  advanced_mesh.cpp  basic_triangle.cpp  comprehensive_demo.cpp  cube_mesh.cpp  matrix_demo.cpp  mesh_stats.cpp  primitives_demo.cpp  stable_demo.cpp
include/polygon_mesh/: polygon_mesh.hpp
include/polygon_mesh/algorithms/: algorithms.hpp  mesh_processing.hpp
include/polygon_mesh/core/: mesh.hpp  types.hpp
include/polygon_mesh/generators/: primitives.hpp
include/polygon_mesh/io/: io.hpp  obj_loader.hpp  ply_loader.hpp
include/polygon_mesh/math/: math_utils.hpp  matrix4.hpp  vector2.hpp  vector3.hpp
include/polygon_mesh/utils/: memory.hpp  profiling.hpp  threading.hpp  utils.hpp
tests/: CMakeLists.txt  basic_test.cpp  mesh_test.cpp  performance_test.cpp
